--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3333
-DATABASE_URL=mongodb://localhost:27017/zopperscraping
+DATABASE_URL=mongodb+srv://indiandigitalservice01:V2aQpeBve8H54rRW@sarkariresult.womtf2i.mongodb.net/zopperscraping
