fixed the all problems

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3333
-DATABASE_URL=mongodb+srv://indiandigitalservice01:V2aQpeBve8H54rRW@sarkariresult.womtf2i.mongodb.net/zopperscraping
+DATABASE_URL=mongodb+srv://kabitadas67069_db_user:kabita%4022@cluster0.vongyjy.mongodb.net/zopper
